# rag-demo

./: .gitignore  pyproject.toml
notebooks/: demo.ipynb
rag_demo/: demo.ipynb
