[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["clemdesr <130474545+clemdesr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

langchain = "^0.3.7"
python-dotenv = "^1.0.1"
llama-index-readers-file = "^0.4.0"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.7"
langchain-mistralai = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
